@@ -1,7 +1,13 @@
+              CHANGES IN WeightedCluster VERSION 1.3-2 [2017-03-28]
+MISC:
+  o Registration of native routines for R 3.4.x and TraMineR >= 1.8-14.
+    See https://stat.ethz.ch/pipermail/r-devel/2017-February/073755.html.
+
+
               CHANGES IN WeightedCluster VERSION 1.2-1
 SMALL FIXES
   o Fixed import related notes in RCMD check.
-  
+
 
               CHANGES IN WeightedCluster VERSION 1.2
 NEW FEATURES
@@ -10,7 +16,7 @@ NEW FEATURES
   o as.clustrange(), wcKMedRange(): Speed and memory handling improvements.
 
 BUG FIXES
-  o wcKMedRange() was internally converting dist objects to matrix. For this reason, it used too much memory. This isn't the case anymore.  
+  o wcKMedRange() was internally converting dist objects to matrix. For this reason, it used too much memory. This isn't the case anymore.
   o Moved the vignettes source to the vignettes folder.
 
               CHANGES IN WeightedCluster VERSION 1.0
@@ -28,7 +34,7 @@ BUG FIXES
   o PBC, HG, HC, where computed only on the lower triangular part of the distance matrix (instead on the whole one).
   o Corrected citation informations
   o Many grammar and spelling corrections in the WeightedClusterPreview vignette (thanks to Nevena Zhelyazkova).
-  
+
 			  CHANGES IN WeightedCluster VERSION 0.9
 
   o First development release
